--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,11 @@ dependencies {
     //library rycycle view
     implementation 'com.android.support:recyclerview-v7:27.1.1'
 
+    //cardview
+    implementation 'com.android.support:cardview-v7:27.1.1'
+
+    //fab
+    implementation 'com.android.support:design:27.1.1'
     //anko
     implementation "org.jetbrains.anko:anko-commons:0.10.8"
     testImplementation 'junit:junit:4.12'
